@@ -1,0 +1,49 @@
+<?xml version='1.0'?>
+
+<!DOCTYPE book PUBLIC "-//OASIS//DTD DocBook XML V4.4//EN"
+  "file:///usr/share/sgml/docbook/xml-dtd-4.4/docbookx.dtd" [
+
+  <!ENTITY date "@RELDATE@">
+  <!ENTITY version "@VERSION@">
+
+  <!ENTITY refzebraimg SYSTEM "ref/zebraimg.xml">
+  <!ENTITY refzebracam SYSTEM "ref/zebracam.xml">
+]>
+
+<book>
+  <bookinfo>
+    <title>Zebra Barcode Reader</title>
+    <productname>zebra-&version;</productname>
+    <date>&date;</date>
+
+    <author>
+      <firstname>Jeff</firstname><surname>Brown</surname>
+      <affiliation>
+        <address><email>spadix@users.sourceforge.net</email></address>
+      </affiliation>
+    </author>
+
+    <copyright>
+      <year>2007</year>
+      <holder>Jeff Brown</holder>
+    </copyright>
+
+    <!-- <legalnotice><para>insert GNU FDL header?</para></legalnotice> -->
+  </bookinfo>
+
+  <chapter id="intro">
+    <title>Introduction</title>
+    <para></para>
+  </chapter>
+
+  <reference id="ref">
+    <title>Zebra Barcode Reader</title>
+
+    &refzebracam;
+    &refzebraimg;
+
+  </reference>
+
+  <!-- insert GNU FDL? -->
+
+</book>
